# medical

./: AGENTS.md  ARCHITECTURE.md  PRD.md  README.md  TASK.md  pyproject.toml
app/: main.py
app/api/: routes.py
app/core/: config.py  logging.py
app/models/: chat.py
app/services/: chat_service.py
tests/: test_api.py  test_core.py
